tests/NormalTests/paczka1/fuzzy1/15293979.err
Error in line 14: fGtAqytEtPD S355 23,9
Error in line 25: 0qXSvt5fbLs A247 37,4
